devj-playground/envs/u165622/current/receiver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-alpine
spec:
  ports:
    - name: http-app
      port: 8080
      targetPort: 8080
      appProtocol: http
  selector:
    app: alpine
